add new certificate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,14 @@ spring.mongodb.show-sql=true
 logging.level.org.hibernate=trace
 logging.level.ord.hibernate.type.descriptor.sql.basicExtractor=false
 
-keyFile=jwtiscool.jks
-password=jwtiscool
-alias=jwtiscool
+#keyFile=jwtiscool.jks
+#password=jwtiscool
+#alias=jwtiscool
 
+
+keyFile=authservercert.jks
+password=authservercert
+alias=authservercert
+
+server.port=8080
 issuerUrl=http://localhost:8080
